--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 </head>
 
 <body>
-	<div class="top-header">
+	<!-- REMPLACEMENT DIV PAR NAV -->
+	<nav class="top-header">
 		<!-- REMPLACEMENT H3 PAR H1 -->
 		<h1 class="name">Nina Carducci</h1>
-		<!-- REMPLACEMENT DIV PAR NAV -->
-		<nav class="nav">
+		<div class="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
 				<li><a href="#gallery">Galerie</a></li>
@@ -44,8 +44,9 @@
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
 						target="_blank"><img src="assets/images/instagram.png" alt="Logo Instagram"></a></li>
 			</ul>
-		</nav>
-	</div>
+		</div>
+	</nav>
+
 	<!-- REMPLACEMENT DIV PAR HEADER -->
 	<header id="header">
 
@@ -90,16 +91,19 @@
 
 	<!-- AJOUT BALISE MAIN -->
 	<main>
-		<div id="about">
+		<!-- REMPLACEMENT DIV PAR SECTION -->
+		<section id="about">
 			<div class="picture left">
 				<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 				<img src="./assets/images/nina.png" alt="Photographie de la photographe Nina Carducci">
 			</div>
 			<div id="about-me">
-				<h3 class="about-me__title">A propos de moi</h3>
-				<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+				<!-- REMPLACEMENT H3 PAR H2 -->
+				<h2 class="about-me__title">A propos de moi</h2>
+				<!-- REMPLACEMENT H6 PAR UN PARAGRAPHE -->
+				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-					immortels, voilà ce qui me fait vibrer.</h6>
+					immortels, voilà ce qui me fait vibrer.</p>
 				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
 					le
 					figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
@@ -111,58 +115,46 @@
 					la
 					tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 			</div>
-		</div>
-		<div id="gallery">
-			<h3 class="title">Portfolio</h3>
+		</section>
+		<!-- REMPLACEMENT DIV PAR SECTION -->
+		<section id="gallery">
+			<!-- REMPLACEMENT H3 PAR H2 -->
+			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<!-- AJOUT ATTRIBUT ALT DES PHOTOGRAPHIES -->
-					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
-						alt="Photographie de la scène lors d'un concert" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
-						alt="Photographie d'un homme en costume" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
-						alt="Photographie d'une femme souriant largement" />
-					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
-						alt="Photographie de deux mains s'approchant l'une de l'autre" />
-					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
-						alt="Photographie d'un homme plissant les yeux face au soleil" />
-					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
-						alt="Photographie d'un couple de mariés se tenant la main" />
-					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
-						alt="Photographie spontanée d'une femme" />
-					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
-						alt="Photographie d'un chanteur sur scène en train de chanter" />
-					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-						alt="Photographie d'une femme à son bureau, en train de rire avec éclat" />
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="Photographie de la scène lors d'un concert">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="Photographie d'un homme en costume">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="Photographie d'une femme souriant largement">
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="Photographie de deux mains s'approchant l'une de l'autre">
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="Photographie d'un homme plissant les yeux face au soleil">
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="Photographie d'un couple de mariés se tenant la main">
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="Photographie spontanée d'une femme">
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="Photographie d'un chanteur sur scène en train de chanter">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="Photographie d'une femme à son bureau, en train de rire avec éclat">
 				</div>
 			</div>
-			<div class="quote">
+			<!-- REMPLACEMENT DIV PAR ASIDE -->
+			<aside class="quote">
 				<figure>
-					<blockquote>
-						<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
+					<blockquote class="quote__text">
+						<!-- SUPPRESSION DU H1 -->
+						Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
 							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
 							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
 							vérité.
-						</h1>
 					</blockquote>
 					<figcaption class="quote__author">- Richard Avedon</figcaption>
 				</figure>
-			</div>
-		</div>
-		<div id="services">
-			<h3 class="title">Mes services</h3>
+			</aside>
+		</section>
+		<!-- REMPLACEMENT DIV PAR SECTION -->
+		<section id="services">
+			<!-- REMPLACEMENT H3 PAR H2 -->
+			<h2 class="title">Mes services</h2>
 			<div class="container">
-				<div class="service">
+				<!-- REMPLACEMENT DIV PAR ARTICLE -->
+				<article class="service">
 					<div class="service__description">
 						<h3>Shooting photo</h3>
 						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
@@ -173,9 +165,9 @@
 						<h4>350€/demi journée</h4>
 						<span>Matériel, déplacement inclus</span>
 					</div>
-
-				</div>
-				<div class="service">
+				</article>
+				<!-- REMPLACEMENT DIV PAR ARTICLE -->
+				<article class="service">
 					<div class="service__description">
 						<h3>Retouches</h3>
 						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
@@ -185,8 +177,9 @@
 						<h4>50€/photo</h4>
 						<span>2 AR par photo</span>
 					</div>
-				</div>
-				<div class="service">
+				</article>
+				<!-- REMPLACEMENT DIV PAR ARTICLE -->
+				<article class="service">
 					<div class="service__description">
 						<h3>Album photos</h3>
 						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
@@ -197,31 +190,36 @@
 						<h4>400€ album A4</h4>
 						<span>30 pages recto/verso</span>
 					</div>
-				</div>
+				</article>
 			</div>
-		</div>
-		<div class="quote">
+		</section>
+		<!-- REMPLACEMENT DIV PAR ASIDE -->
+		<aside class="quote">
 			<figure>
-				<blockquote>
-					<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
-						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+				<blockquote class="quote__text">
+					<!-- SUPPRESSION DU H1 -->
+					De manière inconsciente, je crois, je guette un regard, une expression, des
+					traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
-		</div>
-		<div id="contact">
+		</aside>
+		<!-- REMPLACEMENT DIV PAR SECTION -->
+		<section id="contact">
 			<div class="container">
 				<div class="form-container">
-					<h3>Une question ? Une demande de devis ?</h3>
+					<!-- REMPLACEMENT H3 PAR H2 -->
+					<h2>Une question ? Une demande de devis ?</h2>
 					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-					<form action="" method="post">
-						<label>Nom</label>
+					<!-- AJOUT ATTRIBUT FOR -->
+					<form action="#" method="post">
+						<label for="nom">Nom</label>
 						<input type="text" name="nom" id="nom">
-						<label>Email</label>
+						<label for="email">Email</label>
 						<input type="email" name="email" id="email">
-						<label>Message</label>
+						<label for="message">Message</label>
 						<textarea name="message" id="message" cols="30" rows="10"></textarea>
-						<input type="submit" value="Envoyer" />
+						<input type="submit" value="Envoyer">
 					</form>
 				</div>
 				<div class="picture right">
@@ -229,7 +227,7 @@
 					<img src="./assets/images/camera.png" alt="Photographie d'un appareil photo">
 				</div>
 			</div>
-		</div>
+		</section>
 	</main>
 </body>
 
