--- a/index.html
+++ b/index.html
@@ -12,6 +12,48 @@
 	<meta name="description"
 		content="Nina Carducci photographe professionnelle capturant des moments précieux. Basée à Paris, Contactez-moi pour un devis rapide pour un shooting photo, retouches, albums personnalisés.">
 
+	<!-- AJOUT REFERENCEMENT LOCAL -->
+	<meta name="geo.placename" content="68 avenue Alsace-Lorraine, 33200 Bordeaux">
+	<meta name="telephone" content="05 56 67 78 89">
+	<meta name="business:hours" content="Mo-Fr 10:00-19:00">
+
+	<!-- Rich Snippet Google -->
+	<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "LocalBusiness",
+	  "name": "Nina Carducci",
+	  "address": {
+		"@type": "PostalAddress",
+		"streetAddress": "68 avenue Alsace-Lorraine",
+		"addressLocality": "Bordeaux",
+		"postalCode": "33200",
+		"addressCountry": "France"
+	  },
+	  "telephone": "05 56 67 78 89",
+	  "openingHours": "Mo-Fr 10:00-19:00"
+	}
+	</script>
+
+	<!-- RESEAUX SOCIAUX -->
+
+	<!-- OpenGraph Facebook -->
+	<meta property="og:site_name" content="Nina Carducci" />
+	<meta property="og:title" content="Nina Carducci">
+	<meta property="og:description"
+		content="Nina Carducci photographe professionnelle basée à Paris. Capturant des moments précieux, contactez-moi pour un devis rapide.">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://github.com/anaissclt/OcNinaCarducci">
+	<meta property="og:image" content="https://anaissclt.github.io/OcNinaCarducci/assets/images/nina.png">
+	
+	<!--Twitter Cards -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@CompteTwitter">
+	<meta name="twitter:title" content="Nina Carducci">
+	<meta name="twitter:description"
+		content="Nina Carducci photographe professionnelle basée à Paris. Capturant des moments précieux, contactez-moi pour un devis rapide.">
+	<meta name="twitter:image" content="https://anaissclt.github.io/OcNinaCarducci/assets/images/nina.png"> 
+
 
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
@@ -30,62 +72,65 @@
 </head>
 
 <body>
-	<!-- REMPLACEMENT DIV PAR NAV -->
-	<nav class="top-header">
-		<!-- REMPLACEMENT H3 PAR H1 -->
-		<h1 class="name">Nina Carducci</h1>
-		<div class="nav">
-			<ul>
-				<li><a href="#about">À propos</a></li>
-				<li><a href="#gallery">Galerie</a></li>
-				<li><a href="#services">Service</a></li>
-				<li><a href="#contact">Contact</a></li>
-				<!-- AJOUT ATTRIBUT ALT LOGO INSTAGRAM -->
-				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-						target="_blank"><img src="assets/images/instagram.png" alt="Logo Instagram"></a></li>
-			</ul>
+	<!-- AJOUT BALISE HEADER -->
+	<header>
+		<div class="top-header">
+			<!-- REMPLACEMENT H3 PAR H1 -->
+			<h1 class="name">Nina Carducci</h1>
+			<!-- REMPLACEMENT DIV PAR NAV -->
+			<nav class="nav">
+				<ul>
+					<li><a href="#about">À propos</a></li>
+					<li><a href="#gallery">Galerie</a></li>
+					<li><a href="#services">Service</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<!-- AJOUT ATTRIBUT ALT LOGO INSTAGRAM -->
+					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
+							target="_blank"><img src="assets/images/instagram.png" alt="Logo Instagram"></a></li>
+				</ul>
+			</nav>
 		</div>
-	</nav>
 
-	<!-- REMPLACEMENT DIV PAR HEADER -->
-	<header id="header">
+		<!-- REMPLACEMENT DIV PAR HEADER -->
+		<div id="header">
 
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-					aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-					aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-					aria-label="Slide 3"></button>
+			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+						class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+						aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+						aria-label="Slide 3"></button>
+				</div>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
+							alt="Photographie d'un homme en costume traversant un passage piéton">
+					</div>
+					<div class="carousel-item">
+						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
+						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
+							alt="Photographie d'un groupe de personnes heureuses lors d'un événement festif">
+					</div>
+					<div class="carousel-item">
+						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
+						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
+							alt="Photographie d'un jeune couple de mariés s'embrassant">
+					</div>
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+					data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+					data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
-						alt="Photographie d'un homme en costume traversant un passage piéton">
-				</div>
-				<div class="carousel-item">
-					<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
-						alt="Photographie d'un groupe de personnes heureuses lors d'un événement festif">
-				</div>
-				<div class="carousel-item">
-					<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
-						alt="Photographie d'un jeune couple de mariés s'embrassant">
-				</div>
-			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
 		</div>
 	</header>
 
@@ -123,15 +168,33 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<!-- AJOUT ATTRIBUT ALT DES PHOTOGRAPHIES -->
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="Photographie de la scène lors d'un concert">
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="Photographie d'un homme en costume">
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="Photographie d'une femme souriant largement">
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="Photographie de deux mains s'approchant l'une de l'autre">
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="Photographie d'un homme plissant les yeux face au soleil">
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="Photographie d'un couple de mariés se tenant la main">
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="Photographie spontanée d'une femme">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="Photographie d'un chanteur sur scène en train de chanter">
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="Photographie d'une femme à son bureau, en train de rire avec éclat">
+					<img data-gallery-tag="Concert" class="gallery-item"
+						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+						alt="Photographie de la scène lors d'un concert">
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+						alt="Photographie d'un homme en costume">
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+						alt="Photographie d'une femme souriant largement">
+					<img data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+						alt="Photographie de deux mains s'approchant l'une de l'autre">
+					<img data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						alt="Photographie d'un homme plissant les yeux face au soleil">
+					<img data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						alt="Photographie d'un couple de mariés se tenant la main">
+					<img data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+						alt="Photographie spontanée d'une femme">
+					<img data-gallery-tag="Concert" class="gallery-item"
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+						alt="Photographie d'un chanteur sur scène en train de chanter">
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
+						alt="Photographie d'une femme à son bureau, en train de rire avec éclat">
 				</div>
 			</div>
 			<!-- REMPLACEMENT DIV PAR ASIDE -->
@@ -140,9 +203,9 @@
 					<blockquote class="quote__text">
 						<!-- SUPPRESSION DU H1 -->
 						Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
-							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
-							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
-							vérité.
+						fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
+						n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
+						vérité.
 					</blockquote>
 					<figcaption class="quote__author">- Richard Avedon</figcaption>
 				</figure>
