--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://github.com/anaissclt/OcNinaCarducci">
 	<meta property="og:image" content="https://anaissclt.github.io/OcNinaCarducci/assets/images/nina.png">
-	
+
 	<!--Twitter Cards -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@CompteTwitter">
 	<meta name="twitter:title" content="Nina Carducci">
 	<meta name="twitter:description"
 		content="Nina Carducci photographe professionnelle basée à Paris. Capturant des moments précieux, contactez-moi pour un devis rapide.">
-	<meta name="twitter:image" content="https://anaissclt.github.io/OcNinaCarducci/assets/images/nina.png"> 
+	<meta name="twitter:image" content="https://anaissclt.github.io/OcNinaCarducci/assets/images/nina.png">
 
 
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" media="all">
+	<link rel="stylesheet" href="./assets/style.css" media="all">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,11 +64,11 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/scripts.js" defer></script>
 </head>
 
 <body>
