--- a/index.html
+++ b/index.html
@@ -54,19 +54,23 @@
 		content="Nina Carducci photographe professionnelle basée à Paris. Capturant des moments précieux, contactez-moi pour un devis rapide.">
 	<meta name="twitter:image" content="https://anaissclt.github.io/OcNinaCarducci/assets/images/nina.png">
 
-
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
-
+	<!--Google Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<!--Bootstrap / Jquery -->
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script> <!-- Changement pour le bootsrap minifié -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+	
+	<!--CSS -->
+	<link rel="stylesheet" href="./assets/style.css">
+
+	<!--ASSETS JS -->
 	<script src="./assets/maugallery.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
 </head>
