--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		rel="stylesheet">
 
 	<!--Bootstrap / Jquery -->
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css"> <!-- Changement pour le bootsrap minifié -->
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script> <!-- Changement pour le bootsrap minifié -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
