--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
 	<!--Google Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet">
+	<link 
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" 
+		rel="stylesheet" defer>
 
-	<!--Bootstrap / Jquery -->
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script> <!-- Changement pour le bootsrap minifié -->
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-	
-	<!--CSS -->
-	<link rel="stylesheet" href="./assets/style.css">
+		<!--Bootstrap / Jquery -->
+		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" defer>
+		<script src="./assets/bootstrap/bootstrap.bundle.min.js" ></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 
-	<!--ASSETS JS -->
-	<script src="./assets/maugallery.js" defer></script>
-	<script src="./assets/scripts.js" defer></script>
+		<!--CSS -->
+		<link rel="stylesheet" href="./assets/style.css">
+
+		<!--ASSETS JS -->
+		<script src="./assets/maugallery.js" defer></script>
+		<script src="./assets/scripts.js" defer></script>
 </head>
 
 <body>
