--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
 							alt="Photographie d'un homme en costume traversant un passage piéton">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
+						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
 							alt="Photographie d'un groupe de personnes heureuses lors d'un événement festif">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
+						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100"
 							alt="Photographie d'un jeune couple de mariés s'embrassant">
 					</div>
 				</div>
