--- a/index.html
+++ b/index.html
@@ -160,31 +160,31 @@
 				<div class="gallery" style="display: none">
 					<!-- AJOUT ATTRIBUT ALT DES PHOTOGRAPHIES -->
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.png"
 						alt="Photographie de la scène lors d'un concert">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.png"
 						alt="Photographie d'un homme en costume">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.png"
 						alt="Photographie d'une femme souriant largement">
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.png"
 						alt="Photographie de deux mains s'approchant l'une de l'autre">
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.png"
 						alt="Photographie d'un homme plissant les yeux face au soleil">
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.png"
 						alt="Photographie d'un couple de mariés se tenant la main">
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.png"
 						alt="Photographie spontanée d'une femme">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.png"
 						alt="Photographie d'un chanteur sur scène en train de chanter">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.png"
 						alt="Photographie d'une femme à son bureau, en train de rire avec éclat">
 				</div>
 			</div>
