--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un groupe de personnes heureuses lors d'un événement festif">
+							alt="Photographie d'un groupe de personnes heureuses lors d'un événement festif" loading="lazy">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un jeune couple de mariés s'embrassant">
+							alt="Photographie d'un jeune couple de mariés s'embrassant" loading="lazy">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
