--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<section id="about">
 			<div class="picture left">
 				<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-				<img src="./assets/images/nina.png" alt="Photographie de la photographe Nina Carducci">
+				<img src="./assets/images/nina.webp" alt="Photographie de la photographe Nina Carducci">
 			</div>
 			<div id="about-me">
 				<!-- REMPLACEMENT H3 PAR H2 -->
@@ -283,7 +283,7 @@
 				</div>
 				<div class="picture right">
 					<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-					<img src="./assets/images/camera.png" alt="Photographie d'un appareil photo">
+					<img src="./assets/images/camera.webp" alt="Photographie d'un appareil photo">
 				</div>
 			</div>
 		</section>
