--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<div class="carousel-item active">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un homme en costume traversant un passage piéton">
+							alt="Photographie d'un homme en costume traversant un passage piéton" loading="lazy">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
