Ajout width et height

--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
 					<div class="carousel-item active">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un homme en costume traversant un passage piéton" loading="eager">
+							alt="Photographie d'un homme en costume traversant un passage piéton" loading="eager" width="1920" height="888" style="max-width: 100%; height: auto; object-fit: cover;">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un groupe de personnes heureuses lors d'un événement festif" loading="lazy">
+							alt="Photographie d'un groupe de personnes heureuses lors d'un événement festif" loading="lazy" width="1920" height="888" style="max-width: 100%; height: auto; object-fit: cover;">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un jeune couple de mariés s'embrassant" loading="lazy">
+							alt="Photographie d'un jeune couple de mariés s'embrassant" loading="lazy" width="1920" height="888" style="max-width: 100%; height: auto; object-fit: cover;">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -139,7 +139,7 @@
 		<section id="about">
 			<div class="picture left">
 				<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-				<img src="./assets/images/nina.webp" alt="Photographie de la photographe Nina Carducci" loading="lazy">
+				<img src="./assets/images/nina.webp" alt="Photographie de la photographe Nina Carducci" loading="lazy" width="560" height="560" style="max-width: 100%; height: auto;">
 			</div>
 			<div id="about-me">
 				<!-- REMPLACEMENT H3 PAR H2 -->
@@ -169,31 +169,31 @@
 					<!-- AJOUT ATTRIBUT ALT DES PHOTOGRAPHIES -->
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-						alt="Photographie de la scène lors d'un concert" loading="lazy">
+						alt="Photographie de la scène lors d'un concert" loading="lazy" width="440" height="440" style="width: 100%; height: 100%;">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
-						alt="Photographie d'un homme en costume" loading="lazy">
+						alt="Photographie d'un homme en costume" loading="lazy" width="440" height="440" style="width: 100%; height: 100%;">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
-						alt="Photographie d'une femme souriant largement" loading="lazy">
+						alt="Photographie d'une femme souriant largement" loading="lazy" width="440" height="440" style="width: 100%; height: 100%;">
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
-						alt="Photographie de deux mains s'approchant l'une de l'autre" loading="lazy">
+						alt="Photographie de deux mains s'approchant l'une de l'autre" loading="lazy" width="440" height="440" style="width: 100%; height: 100%;">
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
-						alt="Photographie d'un homme plissant les yeux face au soleil" loading="lazy">
+						alt="Photographie d'un homme plissant les yeux face au soleil" loading="lazy" width="440" height="440" style="width: 100%; height: 100%;">
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
-						alt="Photographie d'un couple de mariés se tenant la main" loading="lazy">
+						alt="Photographie d'un couple de mariés se tenant la main" loading="lazy" width="440" height="440" style="width: 100%; height: 100%;">
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
-						alt="Photographie spontanée d'une femme" loading="lazy">
+						alt="Photographie spontanée d'une femme" loading="lazy" width="440" height="440" style="width: 100%; height: 100%;">
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
-						alt="Photographie d'un chanteur sur scène en train de chanter" loading="lazy">
+						alt="Photographie d'un chanteur sur scène en train de chanter" loading="lazy" width="440" height="440" style="width: 100%; height: 100%;">
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
-						alt="Photographie d'une femme à son bureau, en train de rire avec éclat" loading="lazy">
+						alt="Photographie d'une femme à son bureau, en train de rire avec éclat" loading="lazy" width="440" height="440" style="width: 100%; height: 100%;">
 				</div>
 			</div>
 			<!-- REMPLACEMENT DIV PAR ASIDE -->
@@ -286,7 +286,7 @@
 				</div>
 				<div class="picture right">
 					<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
-					<img src="./assets/images/camera.webp" alt="Photographie d'un appareil photo" loading="lazy">
+					<img src="./assets/images/camera.webp" alt="Photographie d'un appareil photo" loading="lazy"  width="390" height="390" style="width: 100%; height: auto;">
 				</div>
 			</div>
 		</section>
