Ajout width et height

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<li><a href="#contact">Contact</a></li>
 					<!-- AJOUT ATTRIBUT ALT LOGO INSTAGRAM -->
 					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/images/instagram.png" alt="Logo Instagram"></a></li>
+							target="_blank"><img src="assets/images/instagram.png" alt="Logo Instagram" width="20" height="20"></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -106,17 +106,17 @@
 					<div class="carousel-item active">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un homme en costume traversant un passage piéton" loading="eager" width="1920" height="888" style="max-width: 100%; height: auto; object-fit: cover;">
+							alt="Photographie d'un homme en costume traversant un passage piéton" loading="eager" width="1700" height="800" style="max-width: 100%; height: auto; object-fit: cover;">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un groupe de personnes heureuses lors d'un événement festif" loading="lazy" width="1920" height="888" style="max-width: 100%; height: auto; object-fit: cover;">
+							alt="Photographie d'un groupe de personnes heureuses lors d'un événement festif" loading="lazy" width="800" height="888" style="max-width: 100%; height: auto; object-fit: cover;">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un jeune couple de mariés s'embrassant" loading="lazy" width="1920" height="888" style="max-width: 100%; height: auto; object-fit: cover;">
+							alt="Photographie d'un jeune couple de mariés s'embrassant" loading="lazy" width="1700" height="800" style="max-width: 100%; height: auto; object-fit: cover;">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
