Ajout width et height

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<li><a href="#contact">Contact</a></li>
 					<!-- AJOUT ATTRIBUT ALT LOGO INSTAGRAM -->
 					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/images/instagram.png" alt="Logo Instagram" width="20" height="20"></a></li>
+							target="_blank"><img src="assets/images/instagram.png" alt="Logo Instagram" width="40" height="40" style="max-width: 100%; height: auto; object-fit: cover"></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -106,7 +106,7 @@
 					<div class="carousel-item active">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
 						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-							alt="Photographie d'un homme en costume traversant un passage piéton" loading="eager" width="1680" height="800" style="max-width: 100%; height: auto; object-fit: cover;">
+							alt="Photographie d'un homme en costume traversant un passage piéton" loading="eager" width="1680" height="800" style="max-width: 100%; height: auto; object-fit: cover">
 					</div>
 					<div class="carousel-item">
 						<!-- AJOUT ATTRIBUT ALT PHOTOGRAPHIE -->
